src/objects/Metadata_Survey_Trigger__c.object
<CustomObject>
    <description>This object will store information from the Global Product and Global Comment Code that will be used to trigger the correct survey.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This indicates this rule is Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Code_L1__c</fullName>
        <label>Comment Code L1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Code_L2__c</fullName>
        <label>Comment Code L2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Code_L3__c</fullName>
        <label>Comment Code L3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment_Code_Path__c</fullName>
        <label>Comment Code Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <description>Values for this are dynamically taken from case object so that if a contact method is added it will be available automatically in the trigger admin page</description>
        <label>Contact Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <description>Direction is an option to trigger and it is multi-selectable. Shows picklist values from Case.Direction__c</description>
        <label>Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>This is the date after which this rule expires</description>
        <inlineHelpText>Please enter the date till which this rule is going to be valid.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_30_Day_Count__c</fullName>
        <label>Last 30 Day Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_60_Day_Count__c</fullName>
        <label>Last 60 Day Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_90_Day_Count__c</fullName>
        <label>Last 90 Day Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_Trigger_Count__c</fullName>
        <label>Lifetime Trigger Count</label>
        <summaryForeignKey>MST_Action_Count__c.Metadata_Survey_Trigger__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Path__c</fullName>
        <label>Product Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Fieldset__c</fullName>
        <label>Survey Fieldset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Object__c</fullName>
        <description>Text area to enter the Survey Object</description>
        <label>Survey Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Count_Last_Updated__c</fullName>
        <description>Date 30/60/90 Days Trigger Count fields were last updated</description>
        <inlineHelpText>Date 30/60/90 Days Trigger Count fields were last updated</inlineHelpText>
        <label>Trigger Count Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Trigger_Type__c</fullName>
        <description>Level -  Allows creation of a survey trigger at the brand/segment level and L1,L2, and L3 levels of a comment code
Brand/Segment are refreshed in real time based on country entered
L1, L2, and L3 comment code levels are available for the admin.
Path - Allows creation of a survey trigger where a specific product and comment paths are required.
Paths will be copy and pasted into text fields by the admin.
Admin can enter 1 comment path and 1 product path per record</description>
        <inlineHelpText>Level -  Allows creation of a survey trigger at the brand/segment level and L1,L2, and L3 levels of a comment code

Path - Allows creation of a survey trigger where a specific product and comment paths are required.</inlineHelpText>
        <label>Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level</fullName>
                </value>
                <value>
                    <fullName>Path</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Pick the type of survey</description>
        <inlineHelpText>This is the type of survey that will be opened based on the rule</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>Probing Questions</fullName>
                </value>
                <value>
                    <fullName>SAS Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Metadata Survey Trigger</label>
    <listViews>
        <fullName>Ad_Hoc_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Brand__c</columns>
        <columns>Segment__c</columns>
        <columns>Product_Path__c</columns>
        <columns>Comment_Code_L3__c</columns>
        <columns>Survey_Fieldset__c</columns>
        <columns>Lifetime_Trigger_Count__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Ad Hoc</value>
        </filters>
        <label>Ad Hoc Surveys</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Product_Path__c</columns>
        <columns>NAME</columns>
        <columns>Direction__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Active__c</columns>
        <columns>Survey_Fieldset__c</columns>
        <columns>Segment__c</columns>
        <columns>Comment_Code_L3__c</columns>
        <columns>Comment_Code_Path__c</columns>
        <columns>Survey_Object__c</columns>
        <columns>Type__c</columns>
        <columns>Lifetime_Trigger_Count__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Comment_Code_Path__c</field>
            <operation>contains</operation>
            <value>damage</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Records_with_Count</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Last_30_Day_Count__c</columns>
        <columns>Last_60_Day_Count__c</columns>
        <columns>Last_90_Day_Count__c</columns>
        <columns>Lifetime_Trigger_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records with Count</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Foreign_Material</fullName>
        <columns>NAME</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Active__c</columns>
        <columns>Survey_Fieldset__c</columns>
        <columns>Segment__c</columns>
        <columns>Comment_Code_L3__c</columns>
        <columns>Comment_Code_Path__c</columns>
        <columns>Survey_Object__c</columns>
        <columns>Type__c</columns>
        <columns>Lifetime_Trigger_Count__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Comment_Code_L3__c</field>
            <operation>contains</operation>
            <value>Alleged Foreign Material</value>
        </filters>
        <label>Foreign Material</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Probing_Questions</fullName>
        <columns>Product_Path__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Contact_Method__c</columns>
        <columns>Survey_Fieldset__c</columns>
        <columns>Segment__c</columns>
        <columns>Comment_Code_L3__c</columns>
        <columns>Brand__c</columns>
        <columns>Trigger_Type__c</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Probing Questions</value>
        </filters>
        <label>Probing Questions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Safety_Assessment_Surveys</fullName>
        <columns>Country__c</columns>
        <columns>NAME</columns>
        <columns>Comment_Code_L1__c</columns>
        <columns>Comment_Code_L2__c</columns>
        <columns>Comment_Code_L3__c</columns>
        <columns>Segment__c</columns>
        <columns>Contact_Method__c</columns>
        <columns>Language__c</columns>
        <columns>Brand__c</columns>
        <columns>Trigger_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>SAS Survey</value>
        </filters>
        <label>Safety Assessment Surveys</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MTN-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Survey Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>